[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 40 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 0.882353, 0.415686, 0.6, 1 )
shape = SubResource( 2 )

[node name="DashDuration" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DashDuration" to="." method="_on_DashDuration_timeout"]
